--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,20 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.auth h1 { color:rgb(194, 203, 248);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.auth h2 { color:rgb(97, 233, 79);
+}
+
+.auth_failure h1 {
+  color: rgb(189, 32, 32);
+}
+
+.auth_failure h2 {
+  color: rgb(14, 113, 241);
+}
+
+.auth_failure h3 {
+  color: rgb(194, 203, 248);
 }
