--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(216, 211, 211);
 }
 
 .auth h1 { color:rgb(194, 203, 248);
@@ -42,8 +42,8 @@
   margin-bottom: 20px;
   padding: 5px;
   font-size: 20px;
-  background-color: #242424;
-  color: rgb(128, 156, 235);
+  background-color: #272727;
+  color: rgb(182, 198, 243);
   border-radius: 5px;
   border: none;
   -webkit-box-shadow: 0px 0px 34px -5px rgba(128, 156, 235, 0.2);
@@ -52,17 +52,24 @@
 }
 
 .form form label { 
-  color: rgb(128, 156, 235);
+  color: rgb(124, 153, 233);
   text-align: left;
-  margin-bottom: 2px;;
+  margin-bottom: 2px;
+  font-size:15px
 }
 
 .form-submit {
   max-width: 70px;
   margin: 0 auto;
-  background-color: rgb(43, 43, 43);
-  color: white;
+  background-color: rgb(65, 64, 64);
+  color: rgb(231, 227, 227);
   border-radius:5px;
   padding: 4px 10px;
-  
+}
+
+.switchBTN {
+  margin-top: 50px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: rgb(128, 156, 235);
 }
