--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,8 @@ background-color: rgb(11, 60, 206);
   color:rgb(134, 170, 218);
   font-size: 1.4rem;
 }
+
+.validate {
+  color: rgb(4, 158, 4);
+  font-size: 1.1rem;
+}
