--- a/src/App.css
+++ b/src/App.css
@@ -73,11 +73,11 @@
 .form-submit {
   /* max-width: 70px; */
   margin: 20px auto;
-  background-color: rgb(65, 64, 64);
-  color: rgb(231, 227, 227);
+  background-color: rgb(138, 166, 241);
+  color: rgb(32, 32, 32);
   border-radius: 5px;
-  padding: 6px 12px;
-  border: 1px solid black;
+  padding: 7px 12px;
+  border: none;
   cursor: pointer;
 }
 
@@ -140,6 +140,7 @@
   padding: 7px 12px;
   border-radius: 5px;
   background-color: rgb(138, 166, 241);
+  color: rgb(32, 32, 32);
   cursor: pointer;
   border: none;
   margin-bottom: 80px;
@@ -162,6 +163,10 @@
 }
 .btn-back:hover {
 background-color: rgb(11, 60, 206);
+}
+
+.successBox {
+  margin-bottom: 10%;
 }
 
 .loginSuccess {
