--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
   white-space: pre-line;
@@ -121,7 +120,6 @@
   color: rgb(190, 190, 190);
   margin-bottom: 20%;
   width: 70%;
- 
 }
 
 .notification {
@@ -148,7 +146,6 @@
 }
 .selectForm:hover {
   background-color: rgb(89, 130, 241);
-  
 }
 
 .btn-back {
@@ -163,8 +160,8 @@
   border-radius: 3px;
 }
 .btn-back:hover {
-background-color: rgb(11, 60, 206);
-color: rgb(255, 255, 255);
+  background-color: rgb(11, 60, 206);
+  color: rgb(255, 255, 255);
 }
 
 .successBox {
@@ -172,16 +169,20 @@ color: rgb(255, 255, 255);
 }
 
 .loginSuccess {
-  color: rgb(4, 158, 4);;
+  color: rgb(4, 158, 4);
+}
+
+.loginErrorBox {
+  width: 85%;
 }
 
 .loginError {
-  color:rgb(197, 5, 5);
+  color: rgb(197, 5, 5);
   font-size: 1.8rem;
 }
 
 .loginErrorMessage {
-  color:rgb(134, 170, 218);
+  color: rgb(134, 170, 218);
   font-size: 1.2rem;
 }
 
