--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding: 10% 2%;
   font-size: calc(10px + 2vmin);
   color: rgb(216, 211, 211);
 }
@@ -40,10 +41,8 @@
   flex-direction: column;
   max-width: 250px;
 }
-.formContainer h1 {
-  font-size: 2.5rem;
-  text-decoration: underline;
-  color: rgb(150, 175, 252);
+.formContainer {
+ margin-top: 40%;
 }
 
 .form-input {
