--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  padding: 10% 2%;
+  justify-content: center;
+  padding: 2%;
   font-size: calc(10px + 2vmin);
   color: rgb(216, 211, 211);
 }
@@ -42,7 +42,7 @@
   max-width: 250px;
 }
 .formContainer {
- margin-top: 40%;
+ /* margin-top: 40%; */
 }
 
 .form-input {
@@ -119,6 +119,7 @@
   color: rgb(190, 190, 190);
   margin-bottom: 20%;
   width: 70%;
+ 
 }
 
 .notification {
